--- a/index.html
+++ b/index.html
@@ -95,12 +95,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Senior Software Engineer</h3>
+            <div class="subheading mb-3">Inflack Limited</div>
+            <ul class="list-inline dev-icons">
+	          <li>
+	            Developing bill payment service for bKash which is a mobile financial service in Bangladesh
+	          </li>
+	          <li class="list-inline-item">
+	            <i class="fab fa-css3-alt"></i>
+	          </li>
+	          <li class="list-inline-item">
+	            <i class="fab fa-js-square"></i>
+	          </li>
+	          <li class="list-inline-item">
+	            <i class="fab fa-angular"></i>
+	          </li>
+      	  	</ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">October 2019 - Present</span>
           </div>
         </div>
 
