adding inflack exp

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
 	          <li>
 	            Developing bill payment service for bKash which is a mobile financial service in Bangladesh
 	          </li>
-	          <li class="list-inline-item">
-	            <i class="fab fa-css3-alt"></i>
+	          <li>
+	            Working with microservice architecture
 	          </li>
-	          <li class="list-inline-item">
-	            <i class="fab fa-js-square"></i>
+	          <li>
+	           Integrating other banking services in Bangladesh with bKash system
 	          </li>
-	          <li class="list-inline-item">
-	            <i class="fab fa-angular"></i>
+	          <li>
+	            Currently working with Spring, DynamoDB, Redis, etc
 	          </li>
       	  	</ul>
           </div>
