adding inflack exp

--- a/index.html
+++ b/index.html
@@ -119,9 +119,28 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">DG Innovation Lab Limited</div>
+             <ul>
+	          <li>
+	            Requirement analysis, design, development, and collaboration with business and research team
+	          </li>
+	          <li>
+	            Worked in projects related to data analysis, machine learning, and facial recognition
+	          </li>
+	          <li>
+	           Integration with third-party software systems and extensively used services like AWS, DigitalOcean, etc
+	          </li>
+	          <li>
+	            Worked extensively with Spring and Android
+	          </li>
+	          <li>
+	            Real-time communication using Firebase Cloud Messaging, Bluetooth, Spring Boot, MongoDB, etc
+	          </li>
+	          <li>
+	            Collaborate closely with team members to develop a robust solution for prototypin
+	          </li>
+      	  	</ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2011 - March 2013</span>
