--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Chowdhury
-          <span class="text-primary">Sunny</span>
-        </h1>
+        <h2 class="mb-0">Sunny Chowdhury
+        </h2>
         <div class="subheading mb-5">H-61, R-08, Bashundhara R/A, Dhaka - 1229 ·
           <a href="mailto:name@email.com">sunny.sustcse@gmail.com</a>
         </div>
