--- a/index.html
+++ b/index.html
@@ -148,12 +148,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">Inflack Limited</div>
+            <ul>
+	          <li>
+	            Implemented features using Text Recognition, Google Maps, Barcode Scanner, etc
+	          </li>
+	          <li>
+	            Backend development for Medicine Delivery app, Room Booking app, Blood Donor app, etc
+	          </li>
+	          <li>
+	           Had hands-on experience in deploying web applications on DigitalOcean
+	          </li>
+      	  	</ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">January 2018 - August 2018</span>
           </div>
         </div>
 
