--- a/index.html
+++ b/index.html
@@ -169,12 +169,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Junior Software Engineer</h3>
+            <div class="subheading mb-3">IPvision Soft Ltd</div>
+            <ul>
+	          <li>
+	            Responsible for developing Live Streaming, TV Channel Streaming module in ringID for Android platform, specifically audio and video data manipulation, muxing in broadcaster and viewer end, processing live streamer list, live gifts, etc
+	          </li>
+	          <li>
+	            New feature implementation, modification, debugging and testing
+	          </li>
+	          <li>
+	           Improved existing code using proper design principles
+	          </li>
+      	  	</ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">December 2016 - December 2017</span>
           </div>
         </div>
 
