--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Shahjalal University of Science and Technology</h3>
+            <div class="subheading mb-3">Bachelor of Science (Engg.)</div>
+            <div>Computer Science and Engineering</div>
+            <p>CGPA: 3.21</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">Dec 2011 - Jul 2016</span>
           </div>
         </div>
 
