--- a/index.html
+++ b/index.html
@@ -219,7 +219,24 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
+        <ul>
+	        <li>
+	            Languages: C, Java, Python
+	        </li>
+	        <li>
+	            Databases: MySQL, DynamoDB, Redis
+	        </li>
+	        <li>
+	            Frameworks: Android, Spring
+	        </li>
+	        <li>
+	        	Technologies: Mobile Vision APIs, SOAP, REST, LiveData, ViewModel, Room, JWT, RSQL, Sugar ORM, Android Camera API, Firebase, Retrofit, Geofire, Google Maps, Facebook APIs, Git, Butter Knife, Glide
+	        </li>
+	        <li>
+	        	Tools: Netbeans, Android Studio, Code Blocks, Spring Tool Suite, Jupyter Notebook
+	        </li>
+      	</ul>
+       <!--  <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
@@ -256,9 +273,9 @@
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
-        </ul>
+        </ul> -->
 
-        <div class="subheading mb-3">Workflow</div>
+        <!-- <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -272,7 +289,7 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
-        </ul>
+        </ul> -->
       </div>
     </section>
 
