--- a/index.html
+++ b/index.html
@@ -220,20 +220,20 @@
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul>
-	        <li>
-	            Languages: C, Java, Python
+	        <li >
+	            <span class="text-primary">Languages: </span>C, Java, Python
 	        </li>
 	        <li>
-	            Databases: MySQL, DynamoDB, Redis
+	           <span class="text-primary">Databases: </span>MySQL, DynamoDB, Redis
 	        </li>
 	        <li>
-	            Frameworks: Android, Spring
+	            <span class="text-primary">Frameworks: </span>Android, Spring
 	        </li>
 	        <li>
-	        	Technologies: Mobile Vision APIs, SOAP, REST, LiveData, ViewModel, Room, JWT, RSQL, Sugar ORM, Android Camera API, Firebase, Retrofit, Geofire, Google Maps, Facebook APIs, Git, Butter Knife, Glide
+	        	<span class="text-primary">Technologies: </span>Mobile Vision APIs, SOAP, REST, LiveData, ViewModel, Room, JWT, RSQL, Sugar ORM, Android Camera API, Firebase, Retrofit, Geofire, Google Maps, Facebook APIs, Git, Butter Knife, Glide
 	        </li>
 	        <li>
-	        	Tools: Netbeans, Android Studio, Code Blocks, Spring Tool Suite, Jupyter Notebook
+	        	<span class="text-primary">Tools: </span> Netbeans, Android Studio, Code Blocks, Spring Tool Suite, Jupyter Notebook
 	        </li>
       	</ul>
        <!--  <ul class="list-inline dev-icons">
