--- a/index.html
+++ b/index.html
@@ -293,6 +293,17 @@
       </div>
     </section>
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5">
+        	Publications
+        </h2>
+        <p>
+        	Chowdhury S., Islam K.M.S., Mohammad S.N., Amin M.R., Wahid C. (2019) Analysis on Lightning News and Correlation with Lightning Imaging Sensor (LIS) Data. In: Abraham A., Dutta P., Mandal J., Bhattacharya A., Dutta S. (eds) Emerging Technologies in Data Mining and Information Security. Advances in Intelligent Systems and Computing, vol 813. Springer, Singapore
+        </p>
+      </div>
+    </section>
+
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
