--- a/index.html
+++ b/index.html
@@ -319,9 +319,12 @@
         <h2 class="mb-5">
         	Projects
         </h2>
-        <p>
-        	
-        </p>
+        <ul class="list-inline dev-icons">
+        	<li class="list-inline-item">
+        		<img src="img/profile.jpg">
+        		<a href="#">Katalyse &amp;</a>
+        	</li>
+        </ul>
       </div>
     </section>
 
