--- a/index.html
+++ b/index.html
@@ -324,6 +324,11 @@
         		<img src="img/profile.jpg">
         		<a href="#">Katalyse &amp;</a>
         	</li>
+
+        	<li class="list-inline-item">
+        		<img src="img/profile.jpg">
+        		<a href="#">Katalyse &amp;</a>
+        	</li>
         </ul>
       </div>
     </section>
