--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
         </h2>
         <ul class="list-inline dev-icons">
         	<li class="list-inline-item">
-        		<img src="img/profile.jpg">
-        		<a href="#">Katalyse &amp;</a>
+        		<img src="img/profile.jpg" height="50" width="50">
+        		<a href="#">Katalyse f&amp;b</a>
         	</li>
 
         	<li class="list-inline-item">
-        		<img src="img/profile.jpg">
+        		<img src="img/profile.jpg" height="50" width="50">
         		<a href="#">Katalyse &amp;</a>
         	</li>
         </ul>
