--- a/index.html
+++ b/index.html
@@ -319,10 +319,40 @@
         <h2 class="mb-5">
         	Projects
         </h2>
-        <ul class="list-inline dev-icons">
-        	<li class="list-inline-item">
-        		<img src="img/profile.jpg" height="50" width="50">
-        		<a href="#">Katalyse f&amp;b</a>
+        <ul>
+        	<li>
+        		<img src="img/profile.jpg" height="100" width="100">
+        		<a href="#">
+        			Katalyse f&amp;b
+        		</a>
+        		<p>
+        			Katalyse is a app that provide an automation system for restaurant. It's Self-Ordering Interface enables customers to share their preferences and tastes with the restaurants. Thus, the restaurants know exactly what each individual customer needs and wants and as a result, they are able to provide them with tailored quality service every time a customer walks in.
+        		</p>
+        		<br>
+        		<br>
+        		<p>Objective<br>
+                    - Data Driven Quality Service<br>
+                    - Increase the efficiency of resources<br>
+                    - Manage the lifecycle of each customer<br>
+                    - Artificial Intelligence Driven Upselling<br>
+                    - Increase your capacity to do more with less<br>
+                    - Tell engaging stories of your food<br>
+                    - A clear picture of your business<br>
+                    <br>
+                </p>
+                <br>
+                <br>
+                <p>Features<br>
+                    - Full ordering system<br>
+                    - Multilingual &amp; theme based<br>
+                    - Multi-layer category<br>
+                    - Online-Offline data storage<br>
+                    - Items variation &amp; Addon<br>
+                    - user signup &amp; login system with sms validation<br>
+                    - user profile, discount menu, Buy 1 &amp; get 1, secret<br>
+                    - Loyalty point, visiting gift etc.<br>
+                              <br>
+                </p>
         	</li>
 
         	<li class="list-inline-item">
