--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
                     - Artificial Intelligence Driven Upselling<br>
                     - Increase your capacity to do more with less<br>
                     - Tell engaging stories of your food<br>
-                    - A clear picture of your business<br>
-                    <br>
+                    - A clear picture of your business
                 </p>
                 <p>Features<br>
                     - Full ordering system<br>
@@ -346,8 +345,7 @@
                     - Items variation &amp; Addon<br>
                     - user signup &amp; login system with sms validation<br>
                     - user profile, discount menu, Buy 1 &amp; get 1, secret<br>
-                    - Loyalty point, visiting gift etc.<br>
-                              <br>
+                    - Loyalty point, visiting gift etc.
                 </p>
         	</li>
         </ul>
