changed multiple projects

--- a/index.html
+++ b/index.html
@@ -356,21 +356,20 @@
           <li class="list-inline-item p-lg-4" style="text-align: center;">
         		<a href="#">
         			<img src="img/goodrooms-icon.png" height="60" width="60">
-        			
         		</a>
         		<p class="text-primary">GoodRooms (web)</p>
           </li>
           <li class="list-inline-item p-lg-4" style="text-align: center;">
-            <img src="img/invoice-icon.png" height="60" width="60">
-        		<p><a href="#" style="height: : 10px">
-        			Invoice Maker
-        	</a></p>
+        		<a href="https://play.google.com/store/apps/details?id=com.apps.invoiceandestimatemaker" target="_blank">	
+        			<img src="img/invoice-icon.png" height="60" width="60">
+        		</a>
+        		<p>Invoice Maker</p>
           </li>
           <li class="list-inline-item p-lg-4" style="text-align: center;">
-            <img src="img/blooddonar-icon.png" height="60" width="60">
-        		<p><a href="#" style="height: : 10px">
-        			Blood Donar
-        	</a></p>
+        		<a href="#">
+        			<img src="img/blooddonar-icon.png" height="60" width="60">
+        		</a>
+        		<p>Blood Donar</p>
           </li>
         
         </ul>
