profile and intro changed

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
       <div class="w-100">
         <h3 class="mb-0">Sunny Chowdhury
         </h3>
-        <p class="mb-5">H-61, R-08, Bashundhara R/A, Dhaka - 1229 ·
+        <p class="mb-5">Josef-Kindshoven-Straße 5, Bamberg, 96052, Germany ·
           <a href="mailto:sunny.sustcse@gmail.com">sunny.sustcse@gmail.com</a>
         </p>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am experienced in developing backend applications using Java (Spring Boot) and Python (Django). I also have competitive programming experience.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/sunny-chowdhury-224125122">
             <i class="fab fa-linkedin-in"></i>
@@ -100,8 +100,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h4 class="mb-0">Senior Software Engineer</h4>
-            <p class="mb-3">Inflack Limited</p>
+            <h4 class="mb-0">Software Developer</h4>
+            <p class="mb-3">Exabyting Limited</p>
             <ul>
 	          <li>
 	            Developing bill payment service for bKash which is a mobile financial service in Bangladesh
@@ -115,61 +115,37 @@
 	          <li>
 	            Currently working with Spring, DynamoDB, Redis, etc
 	          </li>
+            <li>
+              Requirement analysis, design, development, and collaboration with business and research team
+            </li>
+            <li>
+              Worked in projects related to data analysis, machine learning, and facial recognition
+            </li>
+            <li>
+             Integration with third-party software systems and extensively used services like AWS, DigitalOcean, etc
+            </li>
+            <li>
+              Worked extensively with Spring and Android
+            </li>
+            <li>
+              Real-time communication using Firebase Cloud Messaging, Bluetooth, Spring Boot, MongoDB, etc
+            </li>
+            <li>
+              Collaborate closely with team members to develop a robust solution for prototypin
+            </li>
+             <li>
+              Implemented features using Text Recognition, Google Maps, Barcode Scanner, etc
+            </li>
+            <li>
+              Backend development for Medicine Delivery app, Room Booking app, Blood Donor app, etc
+            </li>
+            <li>
+             Had hands-on experience in deploying web applications on DigitalOcean
+            </li>
       	  	</ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Oct 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h4 class="mb-0">Software Engineer</h4>
-            <p class="mb-3">DG Innovation Lab Limited</p>
-             <ul>
-	          <li>
-	            Requirement analysis, design, development, and collaboration with business and research team
-	          </li>
-	          <li>
-	            Worked in projects related to data analysis, machine learning, and facial recognition
-	          </li>
-	          <li>
-	           Integration with third-party software systems and extensively used services like AWS, DigitalOcean, etc
-	          </li>
-	          <li>
-	            Worked extensively with Spring and Android
-	          </li>
-	          <li>
-	            Real-time communication using Firebase Cloud Messaging, Bluetooth, Spring Boot, MongoDB, etc
-	          </li>
-	          <li>
-	            Collaborate closely with team members to develop a robust solution for prototypin
-	          </li>
-      	  	</ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Sep 2018 - Sep 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h4 class="mb-0">Software Engineer</h4>
-            <p class="mb-3">Inflack Limited</p>
-            <ul>
-	          <li>
-	            Implemented features using Text Recognition, Google Maps, Barcode Scanner, etc
-	          </li>
-	          <li>
-	            Backend development for Medicine Delivery app, Room Booking app, Blood Donor app, etc
-	          </li>
-	          <li>
-	           Had hands-on experience in deploying web applications on DigitalOcean
-	          </li>
-      	  	</ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Jan 2018 - Aug 2018</span>
+            <span class="text-primary">Jan 2018 - Jul 2021</span>
           </div>
         </div>
 
