--- a/index.html
+++ b/index.html
@@ -104,13 +104,19 @@
             <p class="mb-3">Fraunhofer IIS</p>
             <ul>
             <li>
-              Devloping web applications implementing MVC architecture using Django
+              Developed web applications using Django.
             </li>
             <li>
-              Experienced in workding with various Python integrated Development Environments like PyCharm and Sublime Text
+              Proficient in working with Docker and Kubernetes (K8s).
             </li>
             <li>
-              Experience in develpoing REST API using Django REST
+              Created RESTful APIs using Django REST Framework.
+            </li>
+            <li>
+              Built Python libraries for internal process automation.
+            </li>
+            <li>
+              Implemented and managed log management solutions.
             </li>
           
             </ul>
