--- a/index.html
+++ b/index.html
@@ -131,33 +131,30 @@
             <h4 class="mb-0">Software Developer</h4>
             <p class="mb-3">Exabyting Limited</p>
             <ul>
-	          <li>
-	            Developed bill payment service for bKash which is a mobile financial service in Bangladesh
-	          </li>
-	          <li>
-	            Worked with microservice architecture
-	          </li>
-	          <li>
-	           Integrated other banking services in Bangladesh with bKash system
-	          </li>
-	          <li>
-	            Developed both web applications and REST APIs using Java, with Spring Boot, DynamoDB, Redis, etc
-	          </li>
-            <li>
-              Participated in the requirement analysis, design process with with business and research teams
-            </li>
-            <li>
-             Integration with third-party software systems and extensively used services of AWS, DigitalOcean, etc
-            </li>
-            <li>
-              Real-time communication using Firebase Cloud Messaging, Bluetooth, Spring Boot, Reactive databases, etc
-            </li>
-            <li>
-              Collaborated closely with team members to develop a robust solution for prototyping
-            </li>
-            <li>
-             Had hands-on experience in deploying web applications on various cloud platforms
-            </li>
+  	          <li>
+  	            Developed a bill payment service for bKash, a mobile financial service in Bangladesh.
+  	          </li>
+  	          <li>
+  	            Worked with microservice architecture.
+  	          </li>
+  	          <li>
+  	           Integrated various banking services in Bangladesh with the bKash system.
+  	          </li>
+  	          <li>
+  	            Developed web applications and REST APIs using Java, Spring Boot, DynamoDB, Redis, and other technologies.
+  	          </li>
+              <li>
+                Participated in requirement analysis and design processes with business and research teams.
+              </li>
+              <li>
+               Integrated third-party software systems and extensively utilized AWS, and DigitalOcean.
+              </li>
+              <li>
+                Implemented real-time communication using Firebase Cloud Messaging, Bluetooth, Spring Boot, and reactive databases.
+              </li>
+              <li>
+                Collaborated closely with team members to develop robust solutions for prototyping.
+              </li>
       	  	</ul>
           </div>
           <div class="resume-date text-md-right">
@@ -170,15 +167,15 @@
             <h4 class="mb-0">Junior Software Engineer</h4>
             <p class="mb-3">IPvision Canada Inc.</p>
             <ul>
-	          <li>
-	            Worked on Live Streaming, TV Channel Streaming module for ringID android app, specifically audio and video data manipulation, muxing in broadcaster and viewer end, processing live streamer list, live gifts, channel list, etc
-	          </li>
-	          <li>
-	            Implemented new features and wrote unit tests
-	          </li>
-	          <li>
-	           Improved existing code using design principles
-	          </li>
+  	          <li>
+  	            Developed the Live Streaming and TV Channel Streaming module for the ringID Android app, focusing on audio and video data manipulation, muxing for broadcasters and viewers, and managing live streamer lists, live gifts, and channel lists.
+  	          </li>
+  	          <li>
+  	            Implemented new features and wrote unit tests.
+  	          </li>
+  	          <li>
+  	           Improved existing code by applying design principles.
+  	          </li>
       	  	</ul>
           </div>
           <div class="resume-date text-md-right">
