--- a/index.html
+++ b/index.html
@@ -103,21 +103,24 @@
             <h4 class="mb-0">Student Research Assistant</h4>
             <p class="mb-3">Fraunhofer IIS</p>
             <ul>
-            <li>
-              Developed web applications using Django.
-            </li>
-            <li>
-              Proficient in working with Docker and Kubernetes (K8s).
-            </li>
-            <li>
-              Created RESTful APIs using Django REST Framework.
-            </li>
-            <li>
-              Built Python libraries for internal process automation.
-            </li>
-            <li>
-              Implemented and managed log management solutions.
-            </li>
+              <li>
+                Developing web applications using Django.
+              </li>
+              <li>
+                Working with Docker and Kubernetes (K8s) proficiently.
+              </li>
+              <li>
+                Creating RESTful APIs using Django REST Framework.
+              </li>
+              <li>
+                Building Python libraries for internal process automation.
+              </li>
+              <li>
+                Implementing and managing log management solutions.
+              </li>
+              <li>
+                Deploying and managing on-premise Kubernetes (K8s) clusters.
+              </li>
           
             </ul>
           </div>
@@ -231,16 +234,16 @@
 	            <span class="text-primary">Languages: </span>Java, Python, C
 	        </li>
 	        <li>
-	           <span class="text-primary">Databases: </span>MySQL, PostgreSQL, DynamoDB, Redis
+	           <span class="text-primary">Databases: </span>MySQL, PostgreSQL, MongoDB, DynamoDB, Redis
 	        </li>
 	        <li>
-	            <span class="text-primary">Frameworks: </span>Django, Android, Spring
+	            <span class="text-primary">Frameworks: </span>Django, Spring Boot, Android
 	        </li>
           <li>
             <span class="text-primary">Cloud: </span>Google Cloud Platform, Microsoft Azure
           </li>
 	        <li>
-	        	<span class="text-primary">Technologies: </span>Docker, Kubernetes, SOAP, REST, Git, Maven, Gradle, Firebase, LiveData, ViewModel, Room ORM, JWT, Android Camera API, Firebase, Retrofit, Google Maps, Facebook APIs, Butter Knife, Glide
+	        	<span class="text-primary">Technologies: </span>Docker, K8s, GitLab CI/CD, SOAP, REST, Git, Maven, Gradle, Firebase, LiveData, ViewModel, Room ORM, JWT, Android Camera API, Firebase, Retrofit, Google Maps, Facebook APIs
 	        </li>
 	        <li>
 	        	<span class="text-primary">Tools: </span> IntelliJ IDEA, Android Studio, PyCharm, Jupyter Notebook
