--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <span class="text-primary">Cloud: </span>Google Cloud Platform, Microsoft Azure
           </li>
 	        <li>
-	        	<span class="text-primary">Technologies: </span>Docker, K8s, GitLab CI/CD, SOAP, REST, Git, Maven, Gradle, Firebase, LiveData, ViewModel, Room ORM, JWT, Android Camera API, Firebase, Retrofit, Google Maps, Facebook APIs
+	        	<span class="text-primary">Technologies: </span>Docker, K8s, GitLab CI/CD, Graylog, SOAP, REST, Git, Maven, Gradle, Firebase, LiveData, ViewModel, Room ORM, JWT, Android Camera API, Firebase, Retrofit, Google Maps, Facebook APIs
 	        </li>
 	        <li>
 	        	<span class="text-primary">Tools: </span> IntelliJ IDEA, Android Studio, PyCharm, Jupyter Notebook
