--- a/index.html
+++ b/index.html
@@ -302,19 +302,16 @@
               <td>
                 <ul>
                   <li>
-                    Management of test centers
+                    Management of test centers.
                   </li>
                   <li>
-                    Radiation control management tasks
+                    Radiation control management.
                   </li>
                   <li>
-                    Organization of seminars
+                    Organization and scheduling of seminars.
                   </li>
                   <li>
-                    Tasks to complete during Offboarding of employee
-                  </li>
-                  <li>
-                    Library to communicate with IIS Helpdesk system
+                    Employee offboarding tasks.
                   </li>
                 </ul>
               </td>
@@ -334,10 +331,13 @@
               <td>
                 <ul>
                   <li>
-                    eMoney to Real Money conversion tool which can process a million transactions at a time
+                    eMoney to real money conversion tool capable of processing a million transactions simultaneously.
                   </li>
                   <li>
-                    Savings product
+                    Savings product management.
+                  </li>
+                  <li>
+                    Bill payment for credit cards and various household utility services.
                   </li>
                 </ul>
               </td>
@@ -357,13 +357,13 @@
               <td>
                 <ul>
                   <li>
-                    Live Streaming
+                    Live streaming.
                   </li>
                   <li>
-                    Channel Streaming
+                    Channel streaming.
                   </li>
                   <li>
-                    Testing and debugging existing code
+                    Audio and video calls.
                   </li>
                 </ul>
               </td>
