--- a/index.html
+++ b/index.html
@@ -440,19 +440,19 @@
               <td>
                 <ul>
                   <li>
-                    Shopping basket
+                    Shopping basket.
                   </li>
                   <li>
-                    Ordering system &amp; management
+                    Ordering system and management.
                   </li>
                   <li>
-                    Bill PDF generation using FAAS
+                    Bill PDF generation using Function-as-a-Service (FaaS).
                   </li>
                   <li>
-                    Sending bill via email using FAAS
+                    Sending bills via email using FaaS.
                   </li>
                   <li>
-                    Store usage statistics in Firestore
+                    Storing usage statistics in Firestore.
                   </li>
                 </ul>
               </td>
@@ -470,10 +470,10 @@
               <td>
                 <ul>
                   <li>
-                    CRUD of tickets using UDP, AMQP, gRPC and REST
+                    CRUD operations for tickets using UDP, AMQP, gRPC, and REST.
                   </li>
                   <li>
-                    Multiple simultaneous users
+                    Support for multiple simultaneous users.
                   </li>
                 </ul>
               </td>
@@ -491,10 +491,10 @@
               <td>
                 <ul>
                   <li>
-                    Initial routine generation using Genetic algorithm
+                    Initial routine generation using a genetic algorithm.
                   </li>
                   <li>
-                    CRUD routine entry using drag &amp; drop
+                    CRUD operations for routine entries with drag-and-drop functionality.
                   </li>
                 </ul>
               </td>
@@ -512,7 +512,7 @@
               <td>
                 <ul>
                   <li>
-                    Shows the similarity between two documents
+                    Shows the similarity between two documents.
                   </li>
                 </ul>
               </td>
