--- a/index.html
+++ b/index.html
@@ -432,6 +432,30 @@
                 1
               </td>
               <td>
+                Application Deployment (M.Sc.)
+              </td>
+              <td>
+                Deployed web applications on Azure utilizing various services such as virtual machines, containers, Kubernetes, and App Service. Conducted a comparative analysis of operational expenses across different deployment methods.
+              </td>
+              <td>
+                <ul>
+                  <li>
+                    Deployment of web applications on Azure.
+                  </li>
+                  <li>
+                    Utilization of Azure services including virtual machines, containers, Kubernetes, and App Service.
+                  </li>
+                  <li>
+                    Comparative analysis of operational expenses for different deployment methods.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                1
+              </td>
+              <td>
                 Beverage Store (M.Sc.)
               </td>
               <td>
