new design and new info added

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
 <body id="page-top">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+  <nav class="navbar navbar-expand-lg fixed-top" id="sideNav" style="background-color: #e0dad7;">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Sunny Chowdhury</span>
       <span class="d-none d-lg-block">
@@ -74,7 +74,7 @@
         <p class="mb-5">Josef-Kindshoven-Straße 5, Bamberg, 96052, Germany ·
           <a href="mailto:sunny.sustcse@gmail.com">sunny.sustcse@gmail.com</a>
         </p>
-        <p class="lead mb-5">I am experienced in developing backend applications using Java (Spring Boot) and Python (Django). I also have competitive programming experience.</p>
+        <p class="lead mb-5">I am an experienced software developer with expertise in Java, Spring Boot, Django, and Kubernetes, specializing in building scalable, high-performing applications. I excel in designing and implementing robust backend systems and microservices using Java and Spring Boot, while my proficiency in Django enables me to develop full-stack web applications with clean, maintainable code. With strong skills in Kubernetes, I leverage containerization and orchestration to deploy, scale, and manage applications in cloud-native environments. Passionate about solving complex problems, continuous learning, and collaboration, I deliver reliable, innovative, and future-ready software solutions.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/sunny-chowdhury-224125122">
             <i class="fab fa-linkedin-in"></i>
@@ -100,38 +100,58 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h4 class="mb-0">Student Research Assistant</h4>
+            <h4 class="mb-0">Research Assistant</h4>
             <p class="mb-3">Fraunhofer IIS</p>
             <ul>
               <li>
-                Developing web applications using Django.
+                Conducting in-depth research on Docker and Kubernetes security, focusing on best practices, vulnerabilities, and mitigation strategies.
               </li>
               <li>
-                Working with Docker and Kubernetes (K8s) proficiently.
+                Ensuring the security of Kubernetes clusters by implementing role-based access control (RBAC), network policies, and regular vulnerability assessments.
               </li>
               <li>
-                Creating RESTful APIs using Django REST Framework.
+                Authored detailed documentation and reports on findings, contributing to advancements in container security practices.
               </li>
-              <li>
-                Building Python libraries for internal process automation.
-              </li>
-              <li>
-                Implementing and managing log management solutions.
-              </li>
-              <li>
-                Deploying and managing on-premise Kubernetes (K8s) clusters.
-              </li>
-          
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Dec 2021 - Present</span>
+            <span class="text-primary">Jul 2024 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h4 class="mb-0">Software Developer</h4>
+            <h4 class="mb-0">Student Research Assistant</h4>
+            <p class="mb-3">Fraunhofer IIS</p>
+            <ul>
+              <li>
+                Developed and maintained scalable web applications using Django.
+              </li>
+              <li>
+                Designed and implemented RESTful APIs with Django REST Framework for seamless integrations.
+              </li>
+              <li>
+                Built reusable Python libraries to automate and streamline internal processes.
+              </li>
+              <li>
+                Proficiently utilized Docker and Kubernetes for containerization and orchestration.
+              </li>
+              <li>
+                Deployed and managed on-premises Kubernetes (K8s) clusters to ensure reliable operations.
+              </li>
+              <li>
+                Worked with log management solutions to monitor and troubleshoot applications effectively.
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2021 - May 2024</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h4 class="mb-0">Senior Software Engineer</h4>
             <p class="mb-3">Exabyting Limited</p>
             <ul>
   	          <li>
@@ -201,10 +221,10 @@
             <h4 class="mb-0">Otto-Friedrich-Universität Bamberg</h4>
             <p class="mb-0">Master of Science</p>
             <p class="mb-0">International Software Systems Science</p>
-            <p></p>
+            <p>CGPA: 1.7</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Oct 2020 - Present</span>
+            <span class="text-primary">Jul 2021 - May 2024</span>
           </div>
         </div>
 
@@ -213,7 +233,7 @@
             <h4 class="mb-0">Shahjalal University of Science and Technology</h4>
             <p class="mb-0">Bachelor of Science (Engg.)</p>
             <p class="mb-0">Computer Science and Engineering</p>
-            <p>CGPA: 3.21</p>
+            <p>CGPA: 2.19</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jan 2012 - Oct 2016</span>
