--- a/index.html
+++ b/index.html
@@ -574,9 +574,14 @@
         <h3 class="mb-5">
           Publications
         </h3>
-        <p>
-          Chowdhury S., Islam K.M.S., Mohammad S.N., Amin M.R., Wahid C. (2019) Analysis on Lightning News and Correlation with Lightning Imaging Sensor (LIS) Data. In: Abraham A., Dutta P., Mandal J., Bhattacharya A., Dutta S. (eds) Emerging Technologies in Data Mining and Information Security. Advances in Intelligent Systems and Computing, vol 813. Springer, Singapore
-        </p>
+        <ul>
+            <li>
+              Chowdhury, Sunny, and Florian Freund. "Identifying and Analyzing Vulnerabilities and Exploits in On-Premises Kubernetes." IFIP International Conference on ICT Systems Security and Privacy Protection. Springer, Cham, 2025.
+            </li>
+            <li>
+              Chowdhury S., Islam K.M.S., Mohammad S.N., Amin M.R., Wahid C. (2019) Analysis on Lightning News and Correlation with Lightning Imaging Sensor (LIS) Data. In: Abraham A., Dutta P., Mandal J., Bhattacharya A., Dutta S. (eds) Emerging Technologies in Data Mining and Information Security. Advances in Intelligent Systems and Computing, vol 813. Springer, Singapore    
+            </li>
+        </ul>
       </div>
     </section>
 
