--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 1
               </td>
               <td>
-                Application Deployment (M.Sc.)
+                N ways to deploy cloud native application deployment (M.Sc.)
               </td>
               <td>
                 Deployed web applications on Azure utilizing various services such as virtual machines, containers, Kubernetes, and App Service. Conducted a comparative analysis of operational expenses across different deployment methods.
@@ -473,7 +473,7 @@
             </tr>
             <tr>
               <td>
-                1
+                2
               </td>
               <td>
                 Beverage Store (M.Sc.)
@@ -503,7 +503,7 @@
             </tr>
             <tr>
               <td>
-                2
+                3
               </td>
               <td>
                 TicketManagementSystem 5000 (M.Sc.)
@@ -524,7 +524,7 @@
             </tr>
             <tr>
               <td>
-                3
+                4
               </td>
               <td>
                 Class Routine (B.Sc.)
@@ -545,7 +545,7 @@
             </tr>
             <tr>
               <td>
-                4
+                5
               </td>
               <td>
                 Document Similarity (B.Sc.)
