--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 1
               </td>
               <td>
-                N ways to deploy cloud native application deployment (M.Sc.)
+                N ways to deploy cloud native application (M.Sc.)
               </td>
               <td>
                 Deployed web applications on Azure utilizing various services such as virtual machines, containers, Kubernetes, and App Service. Conducted a comparative analysis of operational expenses across different deployment methods.
