--- a/index.html
+++ b/index.html
@@ -575,12 +575,16 @@
           Publications
         </h3>
         <ul>
-            <li>
-              Chowdhury, Sunny, and Florian Freund. "Identifying and Analyzing Vulnerabilities and Exploits in On-Premises Kubernetes." IFIP International Conference on ICT Systems Security and Privacy Protection. Springer, Cham, 2025.
-            </li>
-            <li>
-              Chowdhury S., Islam K.M.S., Mohammad S.N., Amin M.R., Wahid C. (2019) Analysis on Lightning News and Correlation with Lightning Imaging Sensor (LIS) Data. In: Abraham A., Dutta P., Mandal J., Bhattacharya A., Dutta S. (eds) Emerging Technologies in Data Mining and Information Security. Advances in Intelligent Systems and Computing, vol 813. Springer, Singapore    
-            </li>
+          <li>
+            <strong>Identifying and Analyzing Vulnerabilities and Exploits in On-Premises Kubernetes</strong><br>
+             Chowdhury, S, and Florian F – <em>IFIP International Conference on ICT Systems Security and Privacy Protection</em>, 2025. 
+            <a href="http://dx.doi.org/10.1007/978-3-031-92886-4_11" target="_blank">[Link]</a>
+          </li>
+          <li>
+            <strong>Analysis on Lightning News and Correlation with Lightning Imaging Sensor (LIS) Data</strong><br>
+             Chowdhury S., Islam K.M.S., Mohammad S.N., Amin M.R., Wahid C – <em>Emerging Technologies in Data Mining and Information Security. Advances in Intelligent Systems and Computing, vol 813. Springer, Singapore</em>, 2019. 
+            <a href="http://dx.doi.org/10.1007/978-981-13-1498-8_4" target="_blank">[Link]</a>
+          </li>
         </ul>
       </div>
     </section>
